# ananbox

./: .gitignore  README.md
app/src/main/cpp/: CMakeLists.txt  libanbox.cpp
app/src/main/cpp/anbox/products/: anbox.mk  anbox.xml
app/src/main/cpp/anbox/src/: CMakeLists.txt
app/src/main/cpp/anbox/src/anbox/graphics/: layer_composer.h
app/src/main/cpp/anbox/src/anbox/qemu/: pipe_connection_creator.cpp
app/src/main/cpp/anbox/src/server/: CMakeLists.txt  adb_forwarder.cpp  adb_forwarder.h  main.cpp  software_color_buffer.cpp  software_color_buffer.h  streaming_layer_composer.cpp  streaming_layer_composer.h  streaming_protocol.h  streaming_server.cpp  streaming_server.h
app/src/main/cpp/build-test/: CMakeCache.txt  Makefile  cmake_install.cmake
app/src/main/cpp/build-test/anbox/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/anbox/src/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/anbox/src/server/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/algorithm/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/align/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/any/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/array/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/asio/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/assert/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/atomic/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/bind/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/chrono/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/concept_check/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/config/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/container/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/container_hash/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/context/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/conversion/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/core/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/coroutine/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/crc/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/date_time/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/describe/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/detail/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/dll/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/dynamic_bitset/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/endian/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/exception/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/filesystem/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/format/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/function/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/function_types/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/functional/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/fusion/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/headers/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/integer/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/interprocess/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/intrusive/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/io/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/iterator/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/lexical_cast/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/log/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/move/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/mp11/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/mpl/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/multi_index/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/optional/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/parameter/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/phoenix/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/pool/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/predef/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/boost/libs/preprocessor/: Makefile  cmake_install.cmake
app/src/main/cpp/build-test/proot-prefix/tmp/: proot-cfgcmd.txt  proot-gitclone.cmake  proot-gitupdate.cmake  proot-mkdirs.cmake
app/src/main/cpp/build-test/talloc-prefix/tmp/: talloc-cfgcmd.txt  talloc-mkdirs.cmake
app/src/main/cpp/cmake/: Proot.cmake  ProotNative.cmake  ProotTermux.cmake  Talloc.cmake
app/src/main/cpp/proot/src/: .check_process_vm.d  .check_seccomp_filter.d  build.h  proot
app/src/main/cpp/proot/src/cli/: cli.d  note.d  proot.d
app/src/main/cpp/proot/src/execve/: aoxp.d  auxv.d  elf.d  enter.d  exit.d  ldso.d  shebang.d
app/src/main/cpp/proot/src/extension/: extension.d
app/src/main/cpp/proot/src/loader/: loader  loader-m32  loader-m32.d  loader.d
app/src/main/cpp/proot/src/path/: binding.d  canon.d  glue.d  path.d  proc.d  temp.d
app/src/main/cpp/proot/src/ptrace/: ptrace.d  user.d  wait.d
app/src/main/cpp/proot/src/syscall/: chain.d  enter.c  enter.d  exit.d  heap.d  rlimit.d  seccomp.c  seccomp.d  socket.d  syscall.d  sysnum.d
app/src/main/cpp/proot/src/tracee/: event.c  event.d  mem.d  reg.d  tracee.d
(+95 files in other folders)
